fix: final schema validation and ts serialization fixes
